--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -37,26 +37,46 @@
   }
 }
 
-
 /*////////////////////////////////////////*/
+
+* {
+  font-family: 'Montserrat';
+}
 
 button {
   background-color: #AAAAAA;
   color: #FFFFFF;
-  font-family: 'Ubuntu';
   border: none;
-  border-radius: 25px;
   padding: 12px;
 }
 
 
 /*////////////////////////////////////////*/
 
-.bg-primary-button {
-  background-color: #00AA00;
-  font-family: 'Roboto Slab', serif;
+.page-header {
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
-.bg-secondary-button {
+.list-container {
+  background-color: #AAAAAA;
+}
+
+.card-button {
+  font-size: 18px;
+  font-family: 'Questrial';
+  background-color: #AAAAAA;
+  color: #FFFFFF;
+  border: none;
+  padding: 12px;
+}
+
+.primary-button {
+  background-color: #00AA00;
+  border-radius: 20px;
+}
+
+.secondary-button {
   background-color: #0000AA;
+  border-radius: 20px;
 }
