--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -1,82 +1,320 @@
+/*///////////////// PRE-WRITTEN CSS FROM REACT ///////////////////////*/
+
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-/*////////////////////////////////////////*/
+/*///////////////// HTML TAGS ///////////////////////*/
 
 * {
-  font-family: 'Montserrat';
+    font-family: "Montserrat";
 }
 
 button {
-  background-color: #AAAAAA;
-  color: #FFFFFF;
-  border: none;
-  padding: 12px;
+    background-color: #aaaaaa;
+    color: #ffffff;
+    border: none;
+    padding: 12px;
 }
 
+/*///////////////// REPEATABLE ELEMENTS ///////////////////////*/
 
-/*////////////////////////////////////////*/
+.primary-bg {
+    background-color: #00aa95;
+}
 
 .page-header {
-  margin-top: 3%;
-  margin-bottom: 3%;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .list-container {
-  background-color: #AAAAAA;
+    background-color: #aaaaaa;
 }
 
 .card-button {
-  font-size: 18px;
-  font-family: 'Questrial';
-  background-color: #AAAAAA;
-  color: #FFFFFF;
-  border: none;
-  padding: 12px;
+    font-size: 18px;
+    font-family: "Questrial";
+    background-color: #aaaaaa;
+    color: #ffffff;
+    border: none;
+    padding: 12px;
 }
 
 .primary-button {
-  background-color: #00AA00;
-  border-radius: 20px;
+    background-color: #00aa00;
+    border-radius: 20px;
 }
 
 .secondary-button {
-  background-color: #0000AA;
-  border-radius: 20px;
+    background-color: #0000aa;
+    border-radius: 20px;
+}
+
+/*///////////////// SINGLE-USE ELEMENTS ///////////////////////*/
+
+
+
+
+
+/*///////////////// NAVBAR ELEMENTS ///////////////////////*/
+/*Credit to Oskar Borowski for the animations https://codepen.io/oskarborowski/pen/gZRLjV */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700,800");
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+html {
+    font-size: 62.5%;
+}
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+.header-area {
+    position: relative;
+    height: 10vh;
+    background: #00aa95;
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repear;
+    background-size: cover;
+}
+.navbar {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 0;
+    width: 100%;
+    transition: background 0.6s ease-in;
+    z-index: 99999;
+}
+.navbar .navbar-brand {
+    font-family: "Questrial";
+    font-size: 2.5rem;
+}
+.navbar .navbar-toggler {
+    position: relative;
+    height: 50px;
+    width: 50px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.navbar .navbar-toggler .menu-icon-bar {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    height: 2px;
+    background-color: #fff;
+    opacity: 0;
+    -webkit-transform: translateY(-1px);
+    -ms-transform: translateY(-1px);
+    transform: translateY(-1px);
+    transition: all 0.3s ease-in;
+}
+.navbar .navbar-toggler .menu-icon-bar:first-child {
+    opacity: 1;
+    -webkit-transform: translateY(-1px) rotate(45deg);
+    -ms-sform: translateY(-1px) rotate(45deg);
+    transform: translateY(-1px) rotate(45deg);
+}
+.navbar .navbar-toggler .menu-icon-bar:last-child {
+    opacity: 1;
+    -webkit-transform: translateY(-1px) rotate(135deg);
+    -ms-sform: translateY(-1px) rotate(135deg);
+    transform: translateY(-1px) rotate(135deg);
+}
+.navbar .navbar-toggler.collapsed .menu-icon-bar {
+    opacity: 1;
+}
+.navbar .navbar-toggler.collapsed .menu-icon-bar:first-child {
+    -webkit-transform: translateY(-7px) rotate(0);
+    -ms-sform: translateY(-7px) rotate(0);
+    transform: translateY(-7px) rotate(0);
+}
+.navbar .navbar-toggler.collapsed .menu-icon-bar:last-child {
+    -webkit-transform: translateY(5px) rotate(0);
+    -ms-sform: translateY(5px) rotate(0);
+    transform: translateY(5px) rotate(0);
+}
+.navbar-dark .navbar-nav .nav-link {
+    position: relative;
+    color: #fff;
+    font-size: 1.6rem;
+}
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+    color: #fff;
+}
+.navbar.fixed-top {
+    position: fixed;
+    -webkit-animation: navbar-animation 0.6s;
+    animation: navbar-animation 0.6s;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+.navbar.fixed-top.navbar-dark .navbar-nav .nav-link.active {
+    color: #c0ca33;
+}
+.navbar.fixed-top.navbar-dark .navbar-nav .nav-link::after {
+    background-color: #c0ca33;
+}
+.content {
+    padding: 120px 0;
+}
+@media screen and (max-width: 768px) {
+    .navbar-brand {
+        margin-left: 20px;
+    }
+    .navbar-nav {
+        padding: 0 20px;
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+    .navbar.fixed-top .navbar-nav {
+        background: transparent;
+    }
+}
+@media screen and (min-width: 767px) {
+    .banner {
+        padding: 0 150px;
+    }
+    .banner h1 {
+        font-size: 5rem;
+    }
+    .banner p {
+        font-size: 2rem;
+    }
+    .navbar-dark .navbar-nav .nav-link {
+        padding: 23px 15px;
+        font-size: 62.5%;
+        font-family: "Open Sans", sans-serif;
+        font-size: 1.6rem;
+        font-weight: 400;
+        margin-bottom: 0.5em;
+        font-size: 3.6rem;
+        margin-bottom: 0.5em;
+        font-size: 1.6rem;
+        line-height: 1.6;
+    }
+    .navbar-dark .navbar-nav .nav-link::after {
+        content: "";
+        position: absolute;
+        bottom: 15px;
+        left: 30%;
+        right: 30%;
+        height: 1px;
+        background-color: #fff;
+        -webkit-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+        transform: scaleX(0);
+        transition: transform 0.1s ease-in;
+    }
+    .navbar-dark .navbar-nav .nav-link:hover::after {
+        -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+        transform: scaleX(1);
+    }
+    .dropdown-menu {
+        min-width: 200px;
+        -webkit-animation: dropdown-animation 0.3s;
+        animation: dropdown-animation 0.3s;
+        -webkit-transform-origin: top;
+        -ms-transform-origin: top;
+        transform-origin: top;
+    }
+}
+@-webkit-keyframes navbar-animation {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+@keyframes navbar-animation {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+@-webkit-keyframes dropdown-animation {
+    0% {
+        -webkit-transform: scaleY(0);
+        -ms-transform: scaleY(0);
+        transform: scaleY(0);
+    }
+    75% {
+        -webkit-transform: scaleY(1.1);
+        -ms-transform: scaleY(1.1);
+        transform: scaleY(1.1);
+    }
+    100% {
+        -webkit-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        transform: scaleY(1);
+    }
+}
+@keyframes dropdown-animation {
+    0% {
+        -webkit-transform: scaleY(0);
+        -ms-transform: scaleY(0);
+        transform: scaleY(0);
+    }
+    75% {
+        -webkit-transform: scaleY(1.1);
+        -ms-transform: scaleY(1.1);
+        transform: scaleY(1.1);
+    }
+    100% {
+        -webkit-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+        transform: scaleY(1);
+    }
 }
