--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -168,14 +168,13 @@ td {
     font-weight: bold;
 }
 
-
 /*///////////////// SINGLE-USE ELEMENTS ///////////////////////*/
 
 .button-landing-page {
     width: 50% !important;
     height: auto !important;
     font-size: 24px !important;
-    font-family:'Titillium Web' !important;
+    font-family: "Titillium Web" !important;
     border-radius: 18px !important;
     border: none !important;
 }
@@ -193,228 +192,148 @@ td {
 }
 
 /*///////////////// NAVBAR ELEMENTS ///////////////////////*/
-/*Credit to Oskar Borowski for the animations https://codepen.io/oskarborowski/pen/gZRLjV */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700,800");
-@import url('https://fonts.googleapis.com/css?family=Lobster');
-html {
-    font-size: 62.5%;
-}
-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.6rem;
-    font-weight: 400;
-}
-.header-area {
-    position: relative;
-    height: 10vh;
-    background: #00aa95;
-    background-attachment: fixed;
-    background-position: center center;
-    background-repeat: no-repear;
-    background-size: cover;
-}
-.navbar {
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 0;
+/* Styles are based on https://codepen.io/skwbr/pen/QjaBLV */
+.nav-horizontal {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 3em;
     width: 100%;
-    transition: background 0.6s ease-in;
-    z-index: 99999;
 }
-.navbar .navbar-brand {
-    font-family: "Questrial";
-    font-size: 2.5rem;
+
+.nav-container {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 3em;
+    width: 100%;
+    height: 5em;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
 }
-.navbar .navbar-toggler {
-    position: relative;
-    height: 50px;
-    width: 50px;
-    border: none;
-    cursor: pointer;
-    outline: none;
+
+.nav-list {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 3em;
+    width: 100%;
+    display: inline-table;
+    margin: 0 auto;
+    max-width: 100%;
 }
-.navbar .navbar-toggler .menu-icon-bar {
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    height: 2px;
-    background-color: #fff;
-    opacity: 0;
-    -webkit-transform: translateY(-1px);
-    -ms-transform: translateY(-1px);
-    transform: translateY(-1px);
-    transition: all 0.3s ease-in;
+
+.nav-item {
+    overflow: hidden;
+    height: 3em;
+    display: table-cell;
+    margin: 0 auto;
+    max-width: 100%;
 }
-.navbar .navbar-toggler .menu-icon-bar:first-child {
-    opacity: 1;
-    -webkit-transform: translateY(-1px) rotate(45deg);
-    -ms-sform: translateY(-1px) rotate(45deg);
-    transform: translateY(-1px) rotate(45deg);
+
+.nav-link {
+    display: inline-table !important;
+    margin: 0 auto !important;
+    max-width: 100% !important;
+    overflow: hidden !important;
+    height: 3em !important;
+    width: 100% !important;
+    display: block !important;
+    padding: 0 1em !important;
+    text-decoration: none !important;
+    color: #ffffff !important;
+    height: 3em !important;
+    line-height: 3 !important;
 }
-.navbar .navbar-toggler .menu-icon-bar:last-child {
-    opacity: 1;
-    -webkit-transform: translateY(-1px) rotate(135deg);
-    -ms-sform: translateY(-1px) rotate(135deg);
-    transform: translateY(-1px) rotate(135deg);
+.nav-link:hover {
+    text-decoration: none !important;
+    border-bottom: 3px solid white !important;
 }
-.navbar .navbar-toggler.collapsed .menu-icon-bar {
-    opacity: 1;
+
+/*///////////////// FOOTER ELEMENTS ///////////////////////*/
+.footer-horizontal {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 2em;
+    width: 100%;
+    margin-bottom: 0px !important;
+    padding-bottom: 0px !important;
 }
-.navbar .navbar-toggler.collapsed .menu-icon-bar:first-child {
-    -webkit-transform: translateY(-7px) rotate(0);
-    -ms-sform: translateY(-7px) rotate(0);
-    transform: translateY(-7px) rotate(0);
+
+.footer-container {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 3em;
+    width: 100%;
+    height: 2em;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    margin-bottom: 0px !important;
 }
-.navbar .navbar-toggler.collapsed .menu-icon-bar:last-child {
-    -webkit-transform: translateY(5px) rotate(0);
-    -ms-sform: translateY(5px) rotate(0);
-    transform: translateY(5px) rotate(0);
+.footer-item {
+    display: inline-table !important;
+    margin: 0 auto !important;
+    max-width: 100% !important;
+    overflow: hidden !important;
+    height: auto !important;
+    width: 100% !important;
+    display: block !important;
+    padding: 0 0.5em !important;
+    text-decoration: none !important;
+    color: #ffffff !important;
+    height: 2em !important;
+    line-height: 3 !important;
+    font-size: 12px !important;
 }
-.navbar-dark .navbar-nav .nav-link {
-    position: relative;
-    color: #fff;
-    font-size: 1.6rem;
+.footer-item:hover {
+    text-decoration: none !important;
 }
-.navbar-dark .navbar-nav .nav-link:focus,
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: #fff;
+.footer-list {
+    background-color: #00aa95;
+    overflow: hidden;
+    height: 2em;
+    width: 100%;
+    display: inline-table;
+    margin: 0 auto;
+    max-width: 100%;
 }
-.navbar.fixed-top {
-    position: fixed;
-    -webkit-animation: navbar-animation 0.6s;
-    animation: navbar-animation 0.6s;
-    background-color: rgba(0, 0, 0, 0.9);
+
+/*///////////////// GeneralSignupForm ELEMENTS ///////////////////////*/
+.td-option-for-signup {
+    border-bottom: 6px solid #00aa95 !important;
+    padding: 0px !important;
 }
-.navbar.fixed-top.navbar-dark .navbar-nav .nav-link.active {
-    color: #c0ca33;
+.image-option-for-signup {
+    width: 100% !important;
+    margin: 0px !important;
+    filter: opacity(60%);
 }
-.navbar.fixed-top.navbar-dark .navbar-nav .nav-link::after {
-    background-color: #c0ca33;
+.td-option-for-signup:hover {
+    border-bottom: 6px solid #ffffff !important;
 }
-.content {
-    padding: 120px 0;
+.image-option-for-signup:hover {
+    width: 100%;
+    filter: opacity(100%);
 }
-@media screen and (max-width: 768px) {
-    .navbar-brand {
-        margin-left: 20px;
-    }
-    .navbar-nav {
-        padding: 0 20px;
-        background-color: rgba(0, 0, 0, 0.9);
-    }
-    .navbar.fixed-top .navbar-nav {
-        background: transparent;
-    }
+.div-option-for-signup {
+    height: 100% !important;
+    width: 100% !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    padding-top: 12px !important;
+    padding-bottom: 12px !important;
+    color: black !important;
 }
-@media screen and (min-width: 767px) {
-    .banner {
-        padding: 0 150px;
-    }
-    .banner h1 {
-        font-size: 5rem;
-    }
-    .banner p {
-        font-size: 2rem;
-    }
-    .navbar-dark .navbar-nav .nav-link {
-        padding: 23px 15px;
-        font-size: 62.5%;
-        font-family: "Open Sans", sans-serif;
-        font-size: 1.6rem;
-        font-weight: 400;
-        margin-bottom: 0.5em;
-        font-size: 3.6rem;
-        margin-bottom: 0.5em;
-        font-size: 1.6rem;
-        line-height: 1.6;
-    }
-    .navbar-dark .navbar-nav .nav-link::after {
-        content: "";
-        position: absolute;
-        bottom: 15px;
-        left: 30%;
-        right: 30%;
-        height: 1px;
-        background-color: #fff;
-        -webkit-transform: scaleX(0);
-        -ms-transform: scaleX(0);
-        transform: scaleX(0);
-        transition: transform 0.1s ease-in;
-    }
-    .navbar-dark .navbar-nav .nav-link:hover::after {
-        -webkit-transform: scaleX(1);
-        -ms-transform: scaleX(1);
-        transform: scaleX(1);
-    }
-    .dropdown-menu {
-        min-width: 200px;
-        -webkit-animation: dropdown-animation 0.3s;
-        animation: dropdown-animation 0.3s;
-        -webkit-transform-origin: top;
-        -ms-transform-origin: top;
-        transform-origin: top;
-    }
+.div-option-for-signup:hover {
+    background-color: #00aa95;
+    color: white !important;
 }
-@-webkit-keyframes navbar-animation {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-        transform: translateY(-100%);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-    }
+.link-option-for-signup {
+    height: 100% !important;
+    width: 100% !important;
+    color: white !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
-@keyframes navbar-animation {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-100%);
-        -ms-transform: translateY(-100%);
-        transform: translateY(-100%);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-    }
-}
-@-webkit-keyframes dropdown-animation {
-    0% {
-        -webkit-transform: scaleY(0);
-        -ms-transform: scaleY(0);
-        transform: scaleY(0);
-    }
-    75% {
-        -webkit-transform: scaleY(1.1);
-        -ms-transform: scaleY(1.1);
-        transform: scaleY(1.1);
-    }
-    100% {
-        -webkit-transform: scaleY(1);
-        -ms-transform: scaleY(1);
-        transform: scaleY(1);
-    }
-}
-@keyframes dropdown-animation {
-    0% {
-        -webkit-transform: scaleY(0);
-        -ms-transform: scaleY(0);
-        transform: scaleY(0);
-    }
-    75% {
-        -webkit-transform: scaleY(1.1);
-        -ms-transform: scaleY(1.1);
-        transform: scaleY(1.1);
-    }
-    100% {
-        -webkit-transform: scaleY(1);
-        -ms-transform: scaleY(1);
-        transform: scaleY(1);
-    }
+.link-option-for-signup:hover {
+    text-decoration: none !important;
 }
