Added dropdown component to DoctorSearch

--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -113,8 +113,8 @@ th {
     background-color: #00aa95 !important;
 }
 
-.list-container {
-    background-color: #aaaaaa !important;
+.light-gray-bg {
+    background-color: #999999 !important;
 }
 
 .button-generic {
