--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -2,6 +2,8 @@
 
 .App {
     text-align: center;
+    min-height: 100vh;
+    margin-bottom: 0px;
 }
 
 .App-logo {
@@ -205,15 +207,13 @@ th {
 .nav-horizontal {
     background-color: #00aa95;
     overflow: hidden;
-    height: 3em;
+    height: 8vh;
     width: 100%;
 }
 
 .nav-container {
     background-color: #00aa95;
     overflow: hidden;
-    height: 3em;
-    width: 100%;
     height: 5em;
     width: 100%;
     overflow-x: auto;
@@ -258,52 +258,19 @@ th {
 }
 
 /*///////////////// FOOTER ELEMENTS ///////////////////////*/
-.footer-horizontal {
-    background-color: #00aa95;
-    overflow: hidden;
-    height: 2em;
-    width: 100%;
-    margin-bottom: 0px !important;
-    padding-bottom: 0px !important;
-}
-
 .footer-container {
-    background-color: #00aa95;
-    overflow: hidden;
-    height: 3em;
-    width: 100%;
+    background-color: #222222;
     height: 2em;
     width: 100%;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    margin-bottom: 0px !important;
+    position: relative;
+    bottom:0;
+    margin-bottom: 0px;
+    padding-left: 10vw;
 }
-.footer-item {
-    display: inline-table !important;
-    margin: 0 auto !important;
-    max-width: 100% !important;
-    overflow: hidden !important;
-    height: auto !important;
-    width: 100% !important;
-    display: block !important;
-    padding: 0 0.5em !important;
-    text-decoration: none !important;
-    color: #ffffff !important;
-    height: 2em !important;
-    line-height: 3 !important;
-    font-size: 12px !important;
-}
-.footer-item:hover {
-    text-decoration: none !important;
-}
-.footer-list {
-    background-color: #00aa95;
-    overflow: hidden;
+.footer-text {
+    color: #ffffff;
     height: 2em;
-    width: 100%;
-    display: inline-table;
-    margin: 0 auto;
-    max-width: 100%;
+    font-size: 12px;
 }
 
 /*///////////////// GeneralSignupForm ELEMENTS ///////////////////////*/
