--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -650,3 +650,19 @@ th {
     padding-left: 0px !important;
     left: 0px;
 }
+
+
+/*///////////////// INSURANCE PACKAGE ELEMENTS ///////////////////////*/
+.insurance-package-drawer {
+    z-index: 1;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 0;
+    margin-top: 3em;
+    padding-left: 4px;
+    max-height: 91vh;
+    min-width: 35vw;
+    max-width: 45vw;
+    background-color: #eeeeee;
+}
