--- a/patient-manager-react/src/App.css
+++ b/patient-manager-react/src/App.css
@@ -463,6 +463,8 @@ th {
 }
 .chat-table-container {
     border: 1px solid #666666;
+    min-height: 60vh;
+    max-height: 60vh;
 }
 .chat-conversation-container {
     width: 20vmax;
@@ -476,14 +478,13 @@ th {
     margin: 0;
     min-height: 30vh;
     max-height: 60vh;
-    min-width: 20%;
-    max-width: 20%;
     background-color: #dadada;
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
 .chat-online-sub-container {
     max-height: 40vh;
+    width: 100%;
     overflow-y:auto; /*Scrollable*/
 }
 .chat-viewport-container {
@@ -565,11 +566,21 @@ th {
     border: 1px solid #bbaaaaaa;
     background-color: #dedede;
     cursor: pointer;
-    max-width: 106%
+    max-width: 100%;
+    padding: 12px 24px 12px 24px !important;
 }
 .conv-unread-indicator {
     height: 1em;
     padding: 0.15em;
+}
+#unreadIndicator  { /*New version to replace old indicator*/
+    background-color: #2255ee;
+    border-radius: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    color: white;
 }
 .conv-number-unread {
     font-size: 20px;
@@ -598,7 +609,6 @@ th {
     font-size: 18px;
     font-family: "Montserrat";
     font-weight: bold;
-    padding: 0.25em;
     text-align: left;
 }
 #buttonNewConversation {
@@ -650,7 +660,16 @@ th {
     min-width: 16px;
     max-height: 4%;
     max-width: 4%;
-
+}
+.online-list-close-button {
+    background-color: #f85b5b;
+    border-radius: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 36px;
+    color: white;
 }
 .online-list-close-button:hover,
 .online-list-close-button:focus {
